# pd-check-factory

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: triage_rules.json
docs/: ACCESS_MODEL.md  DEPLOYMENT.md  NORMALIZATION_SPEC.md  PD_DRAFT_SPEC_SCHEMA.md  STORAGE.md  TAGGING.md  USAGE.md  backlog.md  release-checklist.md  ui-spec.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
pdcheck_factory/: __init__.py  __main__.py  blob_io.py  cli.py  di_layout.py  document_chat_agent.py  extraction_resolve.py  json_util.py  llm.py  merge.py  opendataloader_ocr.py  paths.py  pd_spec_export.py  pipeline_v2.py  prompt_loader.py  protocol_markdown.py  pseudo_bundle.py  step2_merge.py  step2_review.py  step2_ui_helpers.py  study_artifact_sync.py  text_parse.py  ui_step2_review.py  ui_step_api.py  ui_test_mode.py  ui_v2_review.py  ui_v2_review_streamlit.py  ui_v2_wizard_model.py  xlsx_review.py
prompts/: catalog_generator.md  check_critic.md
schemas/: acrf_section_summaries_merged.schema.json  acrf_section_summary.schema.json  deviations_parsed_v2.schema.json  extracted_document.json  final_deviations_v2.schema.json  pd_candidate_output.schema.json  pd_check_catalog.json  pd_draft_spec.schema.json  pd_logic_output.schema.json  protocol_paragraph_index.schema.json  protocol_rules_kb.schema.json  protocol_section_step1.schema.json  protocol_sections_step2_merged.schema.json  pseudo_logic_v2.schema.json  rules_parsed_v2.schema.json  study_config.json
scripts/: analyze_protocol.py  di_test.py  generate_pd_candidates.py  merge_pd_draft_specs.py  (+3 more)
(+152 files in other folders)
